--- a/app/src/main/res/layout/fm_music_hot.xml
+++ b/app/src/main/res/layout/fm_music_hot.xml
@@ -16,102 +16,119 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <include layout="@layout/view_pager"/>
         <RelativeLayout
+            android:id="@+id/rlMusicHotLoading"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/dimen_10dp">
-            <TextView
-                android:id="@+id/tv_albums_title_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/white"
-                android:layout_centerVertical="true"/>
-            <RelativeLayout
-                android:id="@+id/ll_albums_view_all"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                >
-                <TextView
-                    android:id="@+id/tv_albums_view_all"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/view_all"
-                    android:textSize="12sp"
-                    android:textColor="@drawable/view_all_color"
-                    android:layout_centerVertical="true"/>
-                <ImageView
-                    android:id="@+id/iv_albums_view_all"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_toEndOf="@+id/tv_albums_view_all"
-                    android:src="@drawable/ic_right_color"
-                    android:layout_centerVertical="true"/>
-            </RelativeLayout>
+            android:layout_height="match_parent"
+            android:gravity="center">
 
+            <include layout="@layout/item_loading"/>
         </RelativeLayout>
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rc_albums"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingEnd="@dimen/dimen_10dp"
-            android:paddingStart="0dp"
-            android:scrollbars="horizontal"
-            android:clipToPadding="false"
-            android:scrollbarSize="@dimen/scroll_bar_size"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            >
-        </android.support.v7.widget.RecyclerView>
+
         <LinearLayout
+            android:id="@+id/llMusicHot"
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/borderBlack"
-            android:layout_marginTop="@dimen/dimen_10dp"
-            android:layout_marginStart="@dimen/dimen_10dp">
-        </LinearLayout>
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/dimen_10dp">
-            <TextView
-                android:id="@+id/tv_songs_title_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/white"
-                android:layout_centerVertical="true"/>
+            <include layout="@layout/view_pager"/>
             <RelativeLayout
-                android:id="@+id/ll_songs_view_all"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/dimen_10dp">
+                <TextView
+                    android:id="@+id/tv_albums_title_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/white"
+                    android:layout_centerVertical="true"/>
+                <RelativeLayout
+                    android:id="@+id/ll_albums_view_all"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    >
+                    <TextView
+                        android:id="@+id/tv_albums_view_all"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/view_all"
+                        android:textSize="12sp"
+                        android:textColor="@drawable/view_all_color"
+                        android:layout_centerVertical="true"/>
+                    <ImageView
+                        android:id="@+id/iv_albums_view_all"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_toEndOf="@+id/tv_albums_view_all"
+                        android:src="@drawable/ic_right_color"
+                        android:layout_centerVertical="true"/>
+                </RelativeLayout>
+
+            </RelativeLayout>
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rc_albums"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
+                android:paddingEnd="@dimen/dimen_10dp"
+                android:paddingStart="0dp"
+                android:scrollbars="horizontal"
+                android:clipToPadding="false"
+                android:scrollbarSize="@dimen/scroll_bar_size"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                 >
-                <TextView
-                    android:id="@+id/tv_songs_view_all"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/view_all"
-                    android:textSize="12sp"
-                    android:textColor="@drawable/view_all_color"
-                    android:layout_centerVertical="true"/>
-                <ImageView
-                    android:id="@+id/iv_songs_view_all"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_toEndOf="@+id/tv_songs_view_all"
-                    android:src="@drawable/ic_right_color"
-                    android:layout_centerVertical="true"/>
-            </RelativeLayout>
+            </android.support.v7.widget.RecyclerView>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/borderBlack"
+                android:layout_marginTop="@dimen/dimen_10dp"
+                android:layout_marginStart="@dimen/dimen_10dp">
+            </LinearLayout>
 
-        </RelativeLayout>
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rc_songs"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:scrollbars="vertical"
-            android:clipToPadding="false"
-            >
-        </android.support.v7.widget.RecyclerView>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/dimen_10dp">
+                <TextView
+                    android:id="@+id/tv_songs_title_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/white"
+                    android:layout_centerVertical="true"/>
+                <RelativeLayout
+                    android:id="@+id/ll_songs_view_all"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    >
+                    <TextView
+                        android:id="@+id/tv_songs_view_all"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/view_all"
+                        android:textSize="12sp"
+                        android:textColor="@drawable/view_all_color"
+                        android:layout_centerVertical="true"/>
+                    <ImageView
+                        android:id="@+id/iv_songs_view_all"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_toEndOf="@+id/tv_songs_view_all"
+                        android:src="@drawable/ic_right_color"
+                        android:layout_centerVertical="true"/>
+                </RelativeLayout>
+
+            </RelativeLayout>
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rc_songs"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:scrollbars="vertical"
+                android:clipToPadding="false"
+                >
+            </android.support.v7.widget.RecyclerView>
+        </LinearLayout>
     </LinearLayout>
+
 </android.support.v4.widget.NestedScrollView>
