--- a/app/src/main/res/layout/fm_music_songs.xml
+++ b/app/src/main/res/layout/fm_music_songs.xml
@@ -1,8 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="match_parent">
+
+    <RelativeLayout
+        android:id="@+id/rlMusicSongLoading"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center">
+
+        <include layout="@layout/item_loading"/>
+    </RelativeLayout>
+
     <include layout="@layout/top_title_name"/>
 
     <android.support.v7.widget.RecyclerView
