--- a/app/src/main/res/layout/add_playlist_box.xml
+++ b/app/src/main/res/layout/add_playlist_box.xml
@@ -13,5 +13,19 @@
         android:clipToPadding="false">
     </android.support.v7.widget.RecyclerView>
 
+    <LinearLayout
+        android:id="@+id/btn_cancel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:padding="@dimen/dimen_8dp"
+        android:background="@color/lightBlue">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Huy"
+            android:textSize="16sp"/>
+    </LinearLayout>
+
 
 </LinearLayout>
