--- a/app/src/main/res/layout/activity_change_language.xml
+++ b/app/src/main/res/layout/activity_change_language.xml
@@ -17,14 +17,29 @@
                 android:layout_width="match_parent"
                 android:layout_height="?android:actionBarSize"
                 >
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Languages"
-                    android:textColor="@android:color/white"
-                    android:textSize="20sp"
-                    />
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Languages"
+                        android:textColor="@android:color/white"
+                        android:textSize="20sp"
+                        android:layout_centerVertical="true"
+                        />
+                    <TextView
+                        android:id="@+id/tv_cancel"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Cancel"
+                        android:textColor="@drawable/text_cancel"
+                        android:textSize="20sp"
+                        android:layout_alignParentEnd="true"
+                        android:layout_marginEnd="@dimen/margin_16dp"
+                        android:layout_centerVertical="true"
+                        />
+                </RelativeLayout>
             </android.support.v7.widget.Toolbar>
         </android.support.design.widget.AppBarLayout>
 
