--- a/app/src/main/res/layout/fm_search_result.xml
+++ b/app/src/main/res/layout/fm_search_result.xml
@@ -22,6 +22,7 @@ tools:context="com.example.tiennguyen.luanvannew.fragments.SearchResultFm">
         </RelativeLayout>
 
         <android.support.constraint.ConstraintLayout
+            android:id="@+id/clSearchResult"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
