--- a/app/src/main/res/layout/fm_user.xml
+++ b/app/src/main/res/layout/fm_user.xml
@@ -22,9 +22,8 @@
             android:background="@drawable/bg_header">
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1">
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent">
 
                 <LinearLayout
                     android:id="@+id/llLogout"
@@ -41,8 +40,6 @@
                         android:text="@string/logout"
                         android:textColor="@color/lightBlue"
                         android:textSize="@dimen/logout_playlist_title_text_size_13dp" />
-
-
                 </LinearLayout>
             </LinearLayout>
 
@@ -62,9 +59,8 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
                 android:gravity="right">
 
                 <LinearLayout
@@ -78,7 +74,7 @@
                         android:layout_height="wrap_content"
                         android:paddingLeft="@dimen/padding_8dp"
                         android:paddingRight="@dimen/padding_8dp"
-                        android:text="@string/my_playlist"
+                        android:text="@string/action_playlist"
                         android:textColor="@color/lightBlue"
                         android:textSize="@dimen/logout_playlist_title_text_size_13dp" />
 
