--- a/app/src/main/res/layout/info_content_item.xml
+++ b/app/src/main/res/layout/info_content_item.xml
@@ -100,22 +100,12 @@
                         android:textSize="13sp"
                         android:textColor="@color/white"/>
                     <TextView
-                        android:id="@+id/tv_views"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Lượt views: 200"
-                        android:layout_toEndOf="@+id/iv_avatar"
-                        android:layout_marginStart="@dimen/dimen_16dp"
-                        android:textSize="12sp"
-                        android:textColor="@color/white"
-                        android:layout_alignParentBottom="true"/>
-                    <TextView
                         android:id="@+id/tv_link"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentEnd="true"
                         android:layout_alignParentBottom="true"
-                        android:text="Âm nhạc >>"
+                        android:text="@string/action_musics"
                         android:textColor="@drawable/view_all_color"/>
 
                 </RelativeLayout>
