--- a/app/src/main/res/layout/playlist_item_name.xml
+++ b/app/src/main/res/layout/playlist_item_name.xml
@@ -3,18 +3,22 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="@dimen/dimen_10dp">
+    android:orientation="horizontal"
+    android:padding="@dimen/padding_8dp"
+    android:gravity="center_vertical">
+
+    <ImageView
+        android:id="@+id/imgFolder"
+        android:layout_width="@dimen/new_playlist_image_30dp"
+        android:layout_height="@dimen/new_playlist_image_30dp"
+        android:src="@drawable/song_folder"
+        android:layout_marginRight="@dimen/margin_8dp"/>
 
     <TextView
         android:id="@+id/tvTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="@dimen/album_title_padding"
-        android:paddingRight="@dimen/album_title_padding"
-        android:paddingTop="@dimen/album_title_padding"
         android:textColor="@color/white"
-        android:textSize="@dimen/album_card_text_size1"
         android:text="title"
         />
 
