--- a/app/src/main/res/layout/activity_change_language.xml
+++ b/app/src/main/res/layout/activity_change_language.xml
@@ -23,7 +23,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Languages"
+                        android:text="@string/languages"
                         android:textColor="@android:color/white"
                         android:textSize="20sp"
                         android:layout_centerVertical="true"
@@ -32,7 +32,7 @@
                         android:id="@+id/tv_cancel"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Cancel"
+                        android:text="@string/action_cancel"
                         android:textColor="@drawable/text_cancel"
                         android:textSize="20sp"
                         android:layout_alignParentEnd="true"
