--- a/app/src/main/res/layout/song_player_item.xml
+++ b/app/src/main/res/layout/song_player_item.xml
@@ -8,11 +8,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true">
-        <LinearLayout
+        <RelativeLayout
             android:id="@+id/ll_index"
             android:layout_width="45dp"
             android:layout_height="45dp"
-            android:gravity="center"
             android:visibility="visible"
             android:layout_alignParentTop="true"
             android:layout_alignParentStart="true">
@@ -22,8 +21,16 @@
                 android:layout_height="wrap_content"
                 android:text="1"
                 android:textSize="14sp"
-                android:textColor="@color/white"/>
-        </LinearLayout>
+                android:textColor="@color/white"
+                android:layout_centerInParent="true"/>
+            <ImageView
+                android:id="@+id/img_playing"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:src="@drawable/playing"
+                android:layout_centerInParent="true"
+                android:visibility="gone"/>
+        </RelativeLayout>
     </RelativeLayout>
     <RelativeLayout
         android:layout_width="fill_parent"
