--- a/app/src/main/res/layout/create_playlist_box.xml
+++ b/app/src/main/res/layout/create_playlist_box.xml
@@ -15,7 +15,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight=".3"
-            android:text="Name:" />
+            android:text="@string/name_title" />
 
         <EditText
             android:id="@+id/et_name"
