--- a/app/src/main/res/layout/fm_login.xml
+++ b/app/src/main/res/layout/fm_login.xml
@@ -29,6 +29,7 @@
         </RelativeLayout>
 
         <RelativeLayout
+            android:id="@+id/rlLoginContainer"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center">
@@ -193,6 +194,14 @@
                     android:textColor="@color/darkBlue"
                     android:textSize="@dimen/login_text_sỉze" />
             </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/rlLoginLoading"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center">
+                <include layout="@layout/item_loading"/>
+                </RelativeLayout>
 
             <LinearLayout
                 android:id="@+id/llSignInWith"
