--- a/app/src/main/res/layout/fm_setting.xml
+++ b/app/src/main/res/layout/fm_setting.xml
@@ -172,35 +172,46 @@
                             android:textColor="@color/white"
                             android:layout_centerVertical="true"/>
                     </LinearLayout>
-                    <RelativeLayout
-                        android:layout_width="80dp"
+                    <LinearLayout
+                        android:id="@+id/llTimer"
+                        android:layout_width="@dimen/switch_width_60dp"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
                         android:background="@drawable/spiner_background"
                         android:layout_centerVertical="true"
                         android:layout_alignParentEnd="true">
 
-                        <Spinner
-                            android:id="@+id/spinner"
+                        <!--<Spinner-->
+                            <!--android:id="@+id/spinner"-->
+                            <!--android:layout_width="match_parent"-->
+                            <!--android:layout_height="wrap_content"-->
+                            <!--android:layout_centerVertical="true"-->
+                            <!--android:layout_gravity="center"-->
+                            <!--android:background="@android:color/transparent"-->
+                            <!--android:gravity="center"-->
+                            <!--android:layout_marginLeft="5dp"-->
+                            <!--android:spinnerMode="dropdown"-->
+                            <!--android:popupBackground="#aaaaaa" />-->
+
+                        <!--<ImageView-->
+                            <!--android:layout_width="30dp"-->
+                            <!--android:layout_height="30dp"-->
+                            <!--android:layout_alignParentRight="true"-->
+                            <!--android:layout_centerVertical="true"-->
+                            <!--android:layout_gravity="center"-->
+                            <!--android:src="@drawable/drop"/>-->
+                        <TextView
+                            android:id="@+id/tvTimer"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_centerVertical="true"
-                            android:layout_gravity="center"
-                            android:background="@android:color/transparent"
-                            android:gravity="center"
-                            android:layout_marginLeft="5dp"
-                            android:spinnerMode="dropdown"
-                            android:popupBackground="#aaaaaa" />
+                            android:layout_height="25dp"
+                            android:text="None"
+                            android:textSize="@dimen/text_size_13sp"
+                            android:gravity="right"
+                            android:padding="@dimen/padding_2dp"
+                            android:layout_marginRight="@dimen/margin_5dp"
+                            android:textColor="@color/white"/>
 
-                        <ImageView
-                            android:layout_width="30dp"
-                            android:layout_height="30dp"
-                            android:layout_alignParentRight="true"
-                            android:layout_centerVertical="true"
-                            android:layout_gravity="center"
-                            android:src="@drawable/drop"/>
-
-                    </RelativeLayout>
+                    </LinearLayout>
 
                 </RelativeLayout>
 
@@ -260,16 +271,43 @@
                         />
                 </LinearLayout>
 
-                <Button
-                    android:id="@+id/button_change_language"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                <RelativeLayout
+                    android:id="@+id/rl_row_5"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/row_height_40dp"
+                    android:layout_marginTop="@dimen/margin_16dp"
+                    android:layout_below="@+id/title_language_setting">
 
-                    android:text="@string/button_change"
-                    android:layout_below="@+id/title_language_setting"
-                    />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="center_vertical">
 
-            </RelativeLayout>
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_toStartOf="@+id/ll_swich_3"
+                            android:text="@string/language_title"
+                            android:textColor="@color/white"/>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/ll_swich_4"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
+                        android:layout_centerVertical="true">
+                        <Button
+                            android:id="@+id/button_change_language"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/button_change"
+                            />
+                    </LinearLayout>
+
+                </RelativeLayout>
+
+                </RelativeLayout>
 
         </RelativeLayout>
 
